# emmo

./: .dockerignore  .env.template  .gitignore  .gitlab-ci.yml  .gitmessage  .pre-commit-config.yaml  .pre-commit-env.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.docs  Dockerfile.lint  README.md  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements.txt  setup.py
.gitlab/issue_templates/: Bug.md  Build.md  CI.md  Data.md  Documentation.md  Experiment.md  Feature.md  Literature.md  Performance.md  Refactor.md  Test.md
docs/: CONTRIBUTING.md  README.md  index.md  installation.md  remote_files.md
docs/explanations/: em_algorithm.md  em_algorithm_per_group_background.md  panallelic_prediction.md  prediction_mhc2.md
docs/how_to/: contaminants.md  index.md  reference_motifs.md
docs/models/: 2020.md  2023.md  general.md
docs/usage/: cli.md  cli_deconvolution.md  cli_prediction.md  library.md
emmo/: __init__.py  constants.py  main.py
emmo/bucket/: __init__.py  io.py
emmo/cli/: binding_prediction.py  bucket.py  deconvolution.py
emmo/dataset_processing/: __init__.py
emmo/em/: __init__.py  base_runner.py  mhc1.c  mhc1.py  mhc1_base.py  mhc1_c.py  mhc2.c  mhc2.py  mhc2_base.py  mhc2_c.py  (+1 more)
helper_notebooks/: Analysis of class weights.ipynb  Compile MHCII binding predictor.ipynb  Length distribution in BNT US data.ipynb  MS amino acid frequencies in BNT US data.ipynb  Test pseudosequence distances.ipynb
tests/: __init__.py  conftest.py  helpers.py  test_dummy.py
validation/: parse_modec_output.py  run_example_deconvolution_mhc1.py  run_example_deconvolution_mhc1_c_ext.py  run_example_deconvolution_mhc1_mixmhcp.py  run_example_deconvolution_mhc2.py  run_example_deconvolution_mhc2_c_ext.py  run_example_deconvolution_mhc2_no_offset_weights.py  run_example_deconvolution_mhc2_tf.py  simulate_9mers.py  simulate_various_lengths_mhc1.py  simulate_various_lengths_mhc2.py
(+104 files in other folders)
